# rl-graded-tasks

./: .gitignore  README.md  config.py  debug_task.py  eval_all.py  main.py  pyproject.toml
core/: grading.py  json_io.py  runner.py  schema.py  tools.py
tasks/: registry.py
tasks/fs_find_env/: build_instance.py  grade.py  prompt.md
tasks/logs_top5xx/: build_instance.py  grade.py  prompt.md
tasks/sql_q2_revenue/: build_instance.py  grade.py  prompt.md
tasks/swe_dict_merge_fix/: build_instance.py  grade.py  prompt.md
tasks/swe_dict_merge_fix/fixture/: conftest.py
tasks/swe_dict_merge_fix/fixture/merge/: __init__.py  merge.py
tasks/swe_dict_merge_fix/fixture/tests/: test_merge.py
tasks/swe_slugify_fix/: build_instance.py  grade.py  prompt.md
tasks/swe_slugify_fix/fixture/data/: cases.json
tasks/swe_slugify_fix/fixture/slugify/: slugify.py
tasks/swe_slugify_fix/fixture/tests/: test_slugify.py
