[project]
name = "hello-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.67.0",
    "duckdb>=1.0",
    "jsonschema>=4.21",
    "pydantic>=2.8",
    "pytest>=8.2",
    "tabulate>=0.9",
    "python-dotenv>=1.0.0",
]
